--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -35,6 +35,8 @@ button {
 @import 'reset';
 @import 'fonts';
 @import 'header';
+@import "catalog";
+@import "map";
 @import 'footer';
 
 @import 'media';
